--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,11 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^8.4",
+        "symfony/browser-kit": "4.4.*",
+        "symfony/css-selector": "4.4.*",
         "symfony/maker-bundle": "^1.14",
+        "symfony/phpunit-bridge": "^5.0",
         "symfony/web-server-bundle": "4.4.*"
     },
     "config": {
